      (Bart Whiteley)

    * Fixed REF array out parameters in tupleparse.py.
      (Bart Whiteley)

    * Fixed Array parameters with no elements.  (Bart Whiteley)

    * Fixed precision for real32 and real64 types.  (Bart Whiteley)
 
    * Fixed Array properties where is_array isn't set in __init__.
      (Bart Whiteley)

    * Added NocaseDict.__cmp__(self, other).  (Bart Whiteley)

  ENHANCEMENTS:

    * Added support for generating Pegasus provider registration MOF in 
      cim_provider.codegen(). (Bart Whiteley)

	* Implemented methods to parse indication export requests.
      (Bart Whiteley)

    * Python provider code generation enhancements.  (Bart Whiteley)

    * Support for Pegasus Local authentication.  (Bart Whiteley)

    * Support for Pegasus and OpenWBEM Unix Domain Socket.  (Tim and Bart)

pywbem-0.6  2007-10-26

  LICENSING:
 
    * Relicensed from the GNU GPL to the GNU LGPL.

  API CHANGES:

    * Add a type keyword arg and attribute to CIMQualifier, similar to
      the CIMProperty object, to allow the creation of null qualifiers.
      (Tim Potter) 

    * Remove the toxml() method from CIM object classes.  Use
      tocimxml().toxml() instead which specifies the CIM-XML
      representation of the object. (Tim Potter)

    * CIMDateTime class should now be used instead of datetime.datetime 
      and datetime.timedelta. 

    * Added a new method, CIMInstance.update_existing().  This behaves 
      like update() on a dict, but only assigns new values to existing
      properties.  It skips values for properties not already present
      in the instance.  This is useful for honoring PropertyList within
      python providers. 

  BUG FIXES:

    * Explicitly specify charset="utf-8" in HTTP Content-type header
      as this is required now by the Pegasus cimserver.  (Tim Potter)

    * Parse VALUETYPE elements that contain a TYPE attribute.  This
      feature was introduced in version 2.2 of the CIM-XML DTD and